# python-wiki

./: .gitignore  README.md  debug_parse.py  pyproject.toml  tatus
.trae/documents/: GUI文档目录支持多语言子目录.md  LLM系统提示词专业化优化方案.md  Python Wiki - 对标 Qoder Wiki 的 Python 实现.md  Python Wiki 功能增强计划 - 对标 Qoder Wiki.md  Python Wiki 对标 Qoder Wiki 差距分析与增强计划.md  Python Wiki 对标 Qoder Wiki 开发计划.md  Python Wiki 对标 Qoder Wiki 持续优化计划.md  Python Wiki 对标 Qoder 最新功能持续优化计划.md  Python Wiki 架构优化开发计划.md  Python Wiki 项目文档生成计划.md  plan_20260226_165138.md  plan_20260226_174321.md  plan_20260226_175136.md  为GUI和核心功能添加日志系统.md  为核心功能添加测试.md  优化 Java 项目模块识别逻辑.md  优化文档模板支持多语言项目.md  优化文档生成目录结构.md  修复 API Key 持久化问题.md  修复 API 文档生成无法解析 Java 项目的问题.md  修复 GUI LLM 连通性测试问题.md  修复API文档生成.md  修复GUI打开项目和拖拽目录功能.md  修复P0和P1优先级文档问题.md  修复数据库文档生成不完整问题.md  修复数据库文档生成器问题.md  修复文档生成的三个关键问题.md  修复文档生成语言目录问题.md  修复架构文档图表问题.md  修复架构文档生成程序.md  修复架构洞察分析项目无输出问题.md  修复英文文档生成中的中文问题.md  增强Java项目Wiki文档生成能力.md  多语言分析与LLM优化架构方案.md  安装依赖并运行GUI.md  完善核心功能测试计划.md  实现GUI暂停和终止文档生成功能.md  实现文档依赖感知的并行生成.md  对标 Qoder Wiki 优化文档生成能力.md  扩展代码解析支持 TypeScript 和 Java 技术栈.md  (+12 more)
examples/: agent_example.py
src/pywiki/: __init__.py  exceptions.py  main.py
tests/: test_agents.py  test_memory.py  test_pywiki.py  test_search_engine.py  test_wiki_manager.py
tests/agents/: test_documentation_agent.py
tests/insights/: __init__.py  test_pattern_detector.py  test_tech_stack_analyzer.py
tests/knowledge/: __init__.py  test_design_motivation.py  test_implicit_extractor.py
tests/llm/: test_client.py  test_model_router.py
tests/parsers/: __init__.py  test_factory.py  test_java.py  test_java_advanced.py  test_python_advanced.py  (+2 more)
(+202 files in other folders)
